# housing-rental-web-app

./: LICENSE  README.md  pyproject.toml  requirements.txt  seed_demo_data.py  setup_linux.sh  setup_windows.ps1
app/: __init__.py  config.py  database.py
app/commands/: db_commands.py
app/forms/: housing_filter_form.py  housing_form.py  login_form.py  register_form.py  rental_request_form.py  user_edit_form.py
app/models/: __init__.py  rental_object.py  rental_request.py  user.py
app/routes/: admin_routes.py  auth_routes.py  housing_routes.py  main_routes.py  request_routes.py  user_routes.py
app/services/: admin_service.py  auth_service.py  dashboard_service.py  housing_service.py  request_service.py  user_service.py
app/static/css/: style.css
app/templates/: 403.html  404.html  500.html  base.html  housing_detail.html  housing_list.html  index.html  login.html  profile.html  register.html
app/templates/admin/: dashboard.html  housing.html  housing_create.html  housing_detail_admin.html  housing_edit.html  request_detail.html  requests.html  user_detail.html  user_edit.html  users.html
app/templates/user/: my_requests.html
app/utils/: decorators.py  error_handlers.py
