[project]
name = "housing-rental-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator==2.2.0",
    "flask==3.0.3",
    "flask-login==0.6.3",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
]
